--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,21 @@
-.App {
-  text-align: center;
+.shopping-list__wrapper {
+  text-decoration: none;
+  list-style-type: none;
+  margin:0;
+  padding:20px;
+  font-size: 1.3rem;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.shopping-list__item {    
+  background-color: aliceblue;
+  padding: 30px;
+  border-radius: 5px;
+  list-style-type: none;
+  margin-bottom: 10px;;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
+.text-strike {
+  text-decoration: line-through;
+  opacity: 0.3;
 }
